agents/deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-agent-ingress
  namespace: devops
spec:
  rules:
    - host: devops-agent.mydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-agent-service
                port:
                  number: 5000
